# asdf

./: .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  .pyrefly-baseline.json  .readthedocs.yaml  .readthedocs.yml  .rtd-environment.yml  .travis.yml  CHANGES.rst  CITATION.rst  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.rst  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE  LICENSE.rst  MANIFEST.in  README.md  README.rst  TEMPLATE_CHANGES.md  appveyor.yml  asv.conf.json  bandit.yaml  conftest.py  environment.yml  largeval.asdf  noxfile.py  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py  setup_helpers.py  test.asdf  tox.ini
.github/: CODEOWNERS  dependabot.yml  issue_template.md  pull_request_template.md
.github/workflows/: asdf_ci.yml  benchmark.yml  build.yml  changelog.yml  ci.yml  downstream.yml  label.yml  publish-to-pypi.yml  s390x.yml  scheduled.yml
.pyrefly/: baseline.json
asdf/: __init__.py  _asdf.py  _compression.py  _config.py  _convenience.py  _display.py  _dump.py  _entry_points.py  _helpers.py  _internal_init.py  _io.py  _itertree.py  _lazy_nodes.py  _node_data.py  _node_info.py  _resolver.py  _serialization_context.py  _type_index.py  _types.py  asdf.py  asdftypes.py  block.py  block_manager.py  blocks.py  compression.py  config.py  conftest.py  constants.py  converter.py  entry_points.py  exceptions.py  extension.py  external_reference.py  fits_embed.py  generic_io.py  lazy_nodes.py  node.py  providers.py  reference.py  resolver.py  (+14 more)
asdf/_block/: __init__.py  block.py  callback.py  exceptions.py  external.py  io.py  key.py  manager.py  old_manager.py  options.py  reader.py  store.py  util.py  viewer.py  writer.py
asdf/_commands/: __init__.py  defragment.py  diff.py  edit.py  exploded.py  extension.py  info.py  main.py  search.py  tags.py  to_yaml.py  validate.py
asdf/_core/: _extensions.py  _integration.py
asdf/_extern/: RangeHTTPServer.py  atomicfile.py
asdf/_jsonschema/: README.md  __init__.py  _format.py  _legacy_validators.py  _types.py  _utils.py  _validators.py  conftest.py  exceptions.py  protocols.py  validators.py
asdf/_tests/: __init__.py  _helpers.py  conftest.py  httpserver.py  objects.py  test_api.py  test_array_blocks.py  test_asdf.py  test_block_converter.py  test_compression.py  test_config.py  test_custom_schema.py  test_deprecated.py  test_dump.py  test_entry_points.py  test_extension.py  test_file_format.py  test_fits_embed.py  test_generic_io.py  test_helpers.py  test_history.py  test_info.py  test_integration.py  test_itertree.py  test_junk.py  test_lazy_nodes.py  test_masked.py  test_reference.py  test_reference_files.py  test_s3fs.py  test_schema.py  test_search.py  test_serialization_context.py  test_stream.py  test_tagged.py  test_testing_helpers.py  test_treeutil.py  test_types.py  test_util.py  test_versioning.py  (+1 more)
asdf/commands/: __init__.py  defragment.py  diff.py  edit.py  exploded.py  extension.py  extract.py  info.py  main.py  remove_hdu.py  tags.py  to_yaml.py
asdf/compat/: __init__.py  jsonschemacompat.py  numpycompat.py
asdf/core/: __init__.py  _entities.py  _extensions.py  _integration.py
asdf/extension/: __init__.py  _compressor.py  _converter.py  _extension.py  _legacy.py  _manager.py  _manifest.py  _serialization_context.py  _tag.py  _validator.py
asdf/scripts/: minimum_deps.py
asdf/tags/: __init__.py
asdf/testing/: helpers.py
asdf/tests/: __init__.py  _helpers.py  conftest.py  coveragerc  helpers.py  httpserver.py  objects.py  schema_tester.py  setup_package.py  test_api.py  test_array_blocks.py  test_asdf.py  test_asdf_auto_inline.py  test_asdf_schemas.py  test_asdftypes.py  test_block.py  test_block_converter.py  test_compression.py  test_config.py  test_deprecated.py  test_entry_points.py  test_extension.py  test_file_format.py  test_fits_embed.py  test_generic_io.py  test_helpers.py  test_history.py  test_info.py  test_integration.py  test_legacy_formats.py  test_low_level.py  test_reference.py  test_reference_files.py  test_remote_data.py  test_resolver.py  test_resource.py  test_schema.py  test_search.py  test_stream.py  test_suite.py  (+6 more)
benchmarks/: _utils.py  asdf.py  conftest.py  pytest.ini  schema.py  test_asdf.py  test_schema.py  test_treeutil.py  test_yamlutil.py  treeutil.py  yamlutil.py
changes/: 1744.feature.rst  1800.removal.rst  1801.general.rst  1819.bugfix.rst  1819.removal.rst  1827.doc.rst  1828.misc.rst  1830.doc.rst  1852.removal.rst  1853.feature.rst  1858.removal.rst  1875.bugfix.rst  1880.doc.rst  1884.bugfix.0.rst  1884.bugfix.1.rst  1884.bugfix.2.rst  1884.bugfix.3.rst  1884.feature.rst  1897.doc.rst  1901.bugfix.rst  1904.bugfix.rst  1906.feature.rst  1906.removal.rst  1907.bugfix.rst  1913.doc.rst  1918.bugfix.rst  1920.feature.rst  1922.bugfix.rst  1929.bugfix.rst  1930.feature.rst  1931.bugfix.rst  1934.removal.rst  1935.removal.rst  1936.removal.rst  1937.removal.rst  1938.doc.rst  1939.bugfix.rst  1939.feature.rst  1939.removal.rst  1952.feature.rst  (+33 more)
compatibility_tests/: README.md  assert_file_correct.py  common.py  generate_file.py  test_file_compatibility.py
docker/s390x/: Dockerfile  README.md
docs/: Makefile  conf.py  conftest.py  index.rst  rtd-pip-requirements  rtd_environment.yaml
docs/_asdf/: overview.rst
docs/_static/: custom.css
docs/asdf/: CODE_OF_CONDUCT.rst  arrays.rst  asdf_tool.rst  changes.rst  citation.rst  code_of_conduct.rst  (+15 more)
licenses/: JSONSCHEMA_LICENSE  JSON_LICENSE  LICENSE.rst
packagename/: _astropy_init.py  conftest.py
pyasdf/: __init__.py  _astropy_init.py  _internal_init.py  asdf.py  asdftypes.py  block.py  compression.py  conftest.py  constants.py  extension.py  fits_embed.py  generic_io.py  reference.py  resolver.py  schema.py  setup_package.py  stream.py  tagged.py  treeutil.py  util.py  versioning.py  yamlutil.py
pyfinf/: __init__.py  _astropy_init.py  block.py  conftest.py  constants.py  finf.py  finftypes.py  generic_io.py  reference.py  schema.py  setup_package.py  stream.py  tagged.py  treeutil.py  util.py  versioning.py  yamlutil.py
pytest_asdf/: extension.py  plugin.py
scripts/: asdftool  finftool
(+367 files in other folders)
