[metadata]
name = asdf
description = Python implementation of the ASDF Standard
long_description = file: README.rst
long_description_content_type = text/x-rst
author = The ASDF Developers
author_email = help@stsci.edu
license = BSD-3-Clause
license_file = LICENSE.rst
url = http://github.com/asdf-format/asdf
edit_on_github = False
github_project = asdf-format/asdf
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Development Status :: 5 - Production/Stable

[options]
python_requires= >=3.5
setup_requires = setuptools_scm
install_requires =
    semantic_version>=2.8
    pyyaml>=3.10
    jsonschema>=3.0.2,<4
    numpy>=1.10
    importlib_resources>=3;python_version<"3.9"
    packaging>=16.0

[options.extras_require]
all =
    lz4>=0.10
docs =
    sphinx
    sphinx-astropy
    astropy
    graphviz
    matplotlib
    docutils
tests =
    # As of 2020-07-28, pytest-doctestplus is not compatible
    # with pytest 6.0.0.
    pytest<6
    astropy
    gwcs
    pytest-doctestplus
    pytest-remotedata
    pytest-openfiles
    psutil

[options.entry_points]
console_scripts =
    asdftool = asdf.commands.main:main
asdf_extensions =
    builtin = asdf.extension:BuiltinExtension
pytest11 =
    asdf_schema_tester = pytest_asdf.plugin
asdf.resource_mappings =
    asdf = asdf.resource:get_core_resource_mappings

[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
testpaths = asdf docs asdf-standard/schemas
minversion = 3.1
norecursedirs = build docs/_build docs/sphinxext
doctest_plus = enabled
remote_data_strict = True
open_files_ignore = test.fits asdf.fits
# The asdf.asdftypes module emits a warning on import,
# which pytest trips over during collection:
filterwarnings =
    ignore::asdf.exceptions.AsdfDeprecationWarning:asdf.asdftypes
# Configuration for pytest-doctestplus
text_file_format = rst
# Account for both the astropy test runner case and the native pytest case
asdf_schema_root = asdf-standard/schemas asdf/schemas
asdf_schema_skip_names =
    asdf-schema-1.0.0
    draft-01
    celestial_frame-1.0.0
    celestial_frame-1.1.0
    frame-1.1.0
    spectral_frame-1.1.0
    step-1.1.0
    step-1.2.0
    wcs-1.1.0
    wcs-1.2.0
asdf_schema_skip_examples = domain-1.0.0 frame-1.0.0
# Enable the schema tests by default
asdf_schema_tests_enabled = true
asdf_schema_ignore_unrecognized_tag = true
addopts = --doctest-rst

[flake8]
exclude = extern, docs/conf.py, .tox, .eggs
select = F,W,E101,E111,E502,E722,E901,E902
ignore = W503,W504
