[metadata]
name = asdf
description = Python implementation of the ASDF Standard
long_description = file: README.rst
long_description_content_type = text/x-rst
author = The ASDF Developers
author_email = help@stsci.edu
license = BSD-3-Clause
license_file = LICENSE
url = http://github.com/asdf-format/asdf
project_urls =
    Bug Tracker = https://github.com/asdf-format/asdf/issues
    Documentation = https://asdf.readthedocs.io/en/stable
    Source Code = https://github.com/asdf-format/asdf
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Development Status :: 5 - Production/Stable

[options]
python_requires= >=3.8
setup_requires = setuptools_scm
install_requires =
    importlib_resources>=5.0.7;python_version<"3.9"
    jmespath>=0.6.2
    jsonschema>=3.0.2,<4
    numpy>=1.19
    packaging>=16.0
    pyyaml>=3.10
    semantic_version>=2.8
    asdf-standard>=1.0.0
    asdf-transform-schemas>=0.2.0

[options.extras_require]
all =
    lz4>=0.10
docs =
    sphinx
    sphinx-astropy
    # We can't use 0.14.x until https://github.com/astropy/sphinx-automodapi/pull/142 is released:
    sphinx-automodapi<0.14
    astropy
    graphviz
    matplotlib
    docutils
tests =
    pytest
    astropy
    gwcs
    pytest-doctestplus
    pytest-remotedata
    pytest-openfiles
    psutil
    lz4>=0.10

[options.entry_points]
console_scripts =
    asdftool = asdf.commands.main:main
asdf_extensions =
    builtin = asdf.extension:BuiltinExtension
asdf.extensions =
    asdf = asdf.core._integration:get_extensions
asdf.resource_mappings =
    asdf = asdf.core._integration:get_resource_mappings
pytest11 =
    asdf_schema_tester = pytest_asdf.plugin

[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
testpaths = asdf docs
minversion = 4.6
norecursedirs = build docs/_build docs/sphinxext
doctest_plus = enabled
remote_data_strict = True
open_files_ignore = test.fits asdf.fits
# which pytest trips over during collection:
filterwarnings =
    ignore:numpy.ndarray size changed:astropy.utils.exceptions.AstropyWarning
    ignore:numpy.ndarray size changed:RuntimeWarning
# Configuration for pytest-doctestplus
text_file_format = rst
# Account for both the astropy test runner case and the native pytest case
asdf_schema_root = asdf-standard/schemas asdf/schemas
asdf_schema_skip_tests =
    stsci.edu/asdf/asdf-schema-1.0.0.yaml
    stsci.edu/asdf/transform/domain-1.0.0.yaml
    stsci.edu/asdf/wcs/celestial_frame-1.0.0.yaml
    stsci.edu/asdf/wcs/celestial_frame-1.1.0.yaml
    stsci.edu/asdf/wcs/frame-1.0.0.yaml
    stsci.edu/asdf/wcs/frame-1.1.0.yaml
    stsci.edu/asdf/wcs/spectral_frame-1.1.0.yaml
    stsci.edu/asdf/wcs/step-1.1.0.yaml
    stsci.edu/asdf/wcs/step-1.2.0.yaml
    stsci.edu/asdf/wcs/wcs-1.1.0.yaml
    stsci.edu/asdf/wcs/wcs-1.2.0.yaml
    stsci.edu/yaml-schema/draft-01.yaml
asdf_schema_xfail_tests =
    stsci.edu/asdf/core/ndarray-1.0.0.yaml::test_example_2
# Enable the schema tests by default
asdf_schema_tests_enabled = true
addopts = --doctest-rst

[flake8]
exclude = extern, docs/conf.py, .tox, .eggs
select = F,W,E101,E111,E502,E722,E901,E902
ignore = W503,W504
